--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,51 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  min-height: 100vh;
+
+  background-image: linear-gradient(
+    to top,
+    #f3e7e9 0%,
+    #e3eeff 99%,
+    #e3eeff 100%
+  );
+}
+
+.search-form {
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar {
+  margin-top: 20px;
+  width: 50%;
+  border: none;
+  padding: 10px;
+}
+
+.search-button {
+  margin-top: 20px;
+  background: lightblue;
+  border: none;
+  padding: 10px 20px;
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-left: 10%;
+  margin-right: 10%;
+  color: rgb(51, 51, 51);
+}
+
+ol {
+  text-align: left;
+}
+
+img {
+  width: 80%;
+  border-radius: 50%;
 }
